--- a/vignettes/chavi.Rmd
+++ b/vignettes/chavi.Rmd
@@ -26,10 +26,9 @@ Vocabulary used throughout this document:
 - "Consensus risk haplotype" refers to the stretch of genome shared identically between (nearly) all cases around the site of interest. 
 - "Risk haplotype" refers to the copy of the chromosome for each subject that carries the feature of interest. 
 
-
 ## Step 0: Install chavi 
 
-```{r install} 
+```{r install, message=FALSE} 
 library(devtools)
 install_github("aplantin/chavi")
 library(chavi)
